--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,13 @@
 .App {
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  width: 100%;
 }
 
-.App-logo {
+/*.App-logo {
   height: 40vmin;
   pointer-events: none;
 }
@@ -36,3 +41,4 @@
     transform: rotate(360deg);
   }
 }
+*/
