--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,9 +1,15 @@
 .card { 
-    height: 100%;
-    width: 100%;
-    margin-top: 30px;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    
 }
 .card img{ 
-    max-height: 100%;
-    max-width: 50%;
+    height: 600px;
+    max-width: 900px;
+    border-radius: 5%;
+    box-shadow: 6px 6px 6px gray;
+    
 }
+
+
