--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -3,21 +3,23 @@
     flex-direction: column;
     text-align: center;
     height: 300px;
-    max-width: 700px;
+    max-width: 600px;
+    margin: 0 auto;
 }
 
-.image-container {
+/*.image-container {
     height: 300px;
     max-width: 500px;
     border-radius: 5%;
     box-shadow: 6px 6px 6px gray;
     margin: 0 auto;
-}
+    overflow: hidden;
+}*/
 
 .card img {
     height: 300px;
-    max-width: 600px;
+    width: 600px;
     border-radius: 5%;
-    overflow-y: hidden;
-    overflow-x: hidden;
+    object-fit: cover;
+   
 }
